# GEN_QUIZ_AI

./: README.md  chat_history.json  pyproject.toml  qachatbot.py  requirements.txt
